fullSandbox11072023/force-app/main/default/objects/PRF__c/PRF__c.object-meta.xml
<CustomObject>
    <label>PRF</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PRF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>