fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRF</relationshipLabel>
    <relationshipName>PRF</relationshipName>
    <type>Lookup</type>
</CustomField>