fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Street</label>
    <type>Text</type>
</CustomField>