fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Account_Billing_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Zipcode__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Zipcode</label>
    <type>Text</type>
</CustomField>