fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__r.Name)),
Account__r.SAP_Sold_To__c &amp; &quot; - &quot; &amp; Account__r.Name,
&quot;&quot;
)</formula>
    <label>Account Info</label>
    <type>Text</type>
</CustomField>