fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Additional_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Accounts__c</fullName>
    <label>Additional Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>