fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <summarizedField>PRF_Line_Item__c.Approval_Level__c</summarizedField>
    <summaryForeignKey>PRF_Line_Item__c.PRF__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>