fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Audit_Check__c.field-meta.xml
<CustomField>
    <fullName>Audit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Check</label>
    <type>Checkbox</type>
</CustomField>