fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Field added at the request of Contracts Team to help categorize PRFs.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priced to Tiers</fullName>
            </value>
            <value>
                <fullName>Tier Mix</fullName>
            </value>
            <value>
                <fullName>Off Tier Price</fullName>
            </value>
            <value>
                <fullName>Renewal Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>