fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PRF</relationshipLabel>
    <relationshipName>PRF</relationshipName>
    <type>Lookup</type>
</CustomField>