fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (2)</label>
    <type>DateTime</type>
</CustomField>