fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Eligible_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distributor__c</fullName>
    <label>Eligible Distributor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>