fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Estimated_Annual_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Purchases__c</fullName>
    <label>Estimated Annual Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>