fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/GPO_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>GPO_Affiliation__c</fullName>
    <label>GPO Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>