fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <label>Line Count</label>
    <summaryForeignKey>PRF_Line_Item__c.PRF__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>