fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Line_Item_Class__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Class__c</fullName>
    <description>Used to route Surgical Instruments records (See lineClassCheck method for PP_Sap_Price / PP_Prf).</description>
    <label>Line Item Class</label>
    <length>35</length>
    <type>Text</type>
</CustomField>