fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Material_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Material_Status_Check__c</fullName>
    <label>Material Status Check</label>
    <summarizedField>PRF_Line_Item__c.Material_Status_Check__c</summarizedField>
    <summaryForeignKey>PRF_Line_Item__c.PRF__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>