fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Owner_Approval_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Approval_Role__c</fullName>
    <formula>TEXT( Owner:User.Approval_Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Approval Role</label>
    <type>Text</type>
</CustomField>