fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <formula>TEXT(Owner:User.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>