fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Owner_Cell__c.field-meta.xml
<CustomField>
    <fullName>Owner_Cell__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Cell</label>
    <type>Text</type>
</CustomField>