fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>