fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/PRF_Name__c.field-meta.xml
<CustomField>
    <fullName>PRF_Name__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; Account__r.Name &amp; &quot; - &quot; &amp; Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRF Name</label>
    <type>Text</type>
</CustomField>