fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/PRF_Name_Alt__c.field-meta.xml
<CustomField>
    <fullName>PRF_Name_Alt__c</fullName>
    <formula>If( $User.ProfileId = &quot;00eE0000000j4Vk&quot;, Name &amp; &quot; - &quot; &amp; Account__r.Name &amp; &quot; - &quot; &amp; Owner_Full_Name__c &amp; &quot; -- &quot; &amp; TEXT(Status__c),
			Name &amp; &quot; - &quot; &amp; Account__r.Name &amp; &quot; -- &quot; &amp; TEXT(Status__c)
)</formula>
    <label>PRF Name Alt</label>
    <type>Text</type>
</CustomField>