fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/PRF_Name_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>PRF_Name_Sales_Person__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; Account__r.Name &amp; &quot; - &quot; &amp; Owner_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRF Name Sales Person</label>
    <type>Text</type>
</CustomField>