fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/PRF_Promotion_related__c.field-meta.xml
<CustomField>
    <fullName>PRF_Promotion_related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added at the request of Latam Business Unit.</description>
    <label>PRF Promotion-related</label>
    <type>Checkbox</type>
</CustomField>