fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Price_Quote__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Quote</label>
    <referenceTo>Price_Quote__c</referenceTo>
    <relationshipLabel>PRF</relationshipLabel>
    <relationshipName>PRF</relationshipName>
    <type>Lookup</type>
</CustomField>