fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Price_Tier_Status__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier_Status__c</fullName>
    <label>Price Tier Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>