fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Pricing_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analysis__c</fullName>
    <label>Pricing Analysis</label>
    <type>Url</type>
</CustomField>