fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Pricing_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Level__c</fullName>
    <label>Pricing Tier Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>