fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Requisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Requisition Date</label>
    <type>Date</type>
</CustomField>