fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/RsmRepToggle__c.field-meta.xml
<CustomField>
    <fullName>RsmRepToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to toggle Pricing Portal view on PRF to show RSM/Rep pricing.</description>
    <inlineHelpText>Used to toggle Pricing Portal view on PRF to show RSM/Rep pricing.</inlineHelpText>
    <label>Rsm/Rep Toggle</label>
    <type>Checkbox</type>
</CustomField>