fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Sales_Deal__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deal__c</fullName>
    <label>Sales Deal #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>