fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Key__c</fullName>
    <label>Sales Org Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>