fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Total_Annual_Eaches__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Eaches__c</fullName>
    <description>Part of ASK/SUA Process</description>
    <label>Total Annual Eaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>