fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/User_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>User_Approval_Level__c</fullName>
    <formula>Owner:User.Approval_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Approval Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>