fullSandbox11072023/force-app/main/default/objects/PRF__c/fields/Workflow_Pricing_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Pricing_Analysis__c</fullName>
    <formula>HYPERLINK(&quot;https://teleflex.my.salesforce.com/apex/PP_ApprovalLayoutPrf?gs=off&amp;pqId=&quot;&amp;Id, Account_Name_Text__c &amp; &quot; (&quot; &amp; Account_SAP_Code__c &amp; &quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Pricing Analysis</label>
    <type>Text</type>
</CustomField>