fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Additional_Accounts__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>