fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/All_PRF_s_Waiting_For_RSM.listView-meta.xml
<ListView>
    <fullName>All_PRF_s_Waiting_For_RSM</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Owner_Business_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waiting For RSM Approval</value>
    </filters>
    <label>All PRF&apos;s - Waiting For RSM</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Internal_Users</group>
    </sharedTo>
</ListView>