fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/Alternate_Care_Below_RSM_2nd_Level_PRF.listView-meta.xml
<ListView>
    <fullName>Alternate_Care_Below_RSM_2nd_Level_PRF</fullName>
    <filterScope>Queue</filterScope>
    <label>Alternate Care Below RSM 2nd Level</label>
    <queue>Alternate_Care_Below_RSM_2nd_Level</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>