fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/Anesthesia_Below_RSM_Level_Inside_Sales_PRF.listView-meta.xml
<ListView>
    <fullName>Anesthesia_Below_RSM_Level_Inside_Sales_PRF</fullName>
    <filterScope>Queue</filterScope>
    <label>Anesthesia Below RSM Level Inside Sales</label>
    <queue>Anesthesia_Below_RSM_Level_Inside_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>