fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/Anesthesia_Below_RSM_Level_PRF.listView-meta.xml
<ListView>
    <fullName>Anesthesia_Below_RSM_Level_PRF</fullName>
    <filterScope>Queue</filterScope>
    <label>Anesthesia Below RSM Level</label>
    <queue>Anesthesia_Below_RSM_Level</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>