fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/Contracts_Canada_Team_PRF.listView-meta.xml
<ListView>
    <fullName>Contracts_Canada_Team_PRF</fullName>
    <filterScope>Queue</filterScope>
    <label>Contracts Canada Team</label>
    <queue>Contracts_Canada_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>