fullSandbox11072023/force-app/main/default/objects/PRF__c/listViews/Contracts_Cardiac_Team_PRF.listView-meta.xml
<ListView>
    <fullName>Contracts_Cardiac_Team_PRF</fullName>
    <filterScope>Queue</filterScope>
    <label>Contracts Cardiac Team</label>
    <queue>Contracts_Cardiac_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>